Improves application logging and testability
Adds SLF4J and Logback for structured logging.

Uses ResourceBundle for externalizing test strings, improving maintainability and potential for localization.